--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,9 +1,31 @@
 @use "@/assets/styles/mixins/container" as *;
+@use "@/assets/styles/variables" as *;
 
 .wrapper {
   @include wrapper();
 }
 
-.container {
-  @include container();
+// .container {
+//   @include container();
+// }
+
+ul {
+  list-style: none;
 }
+
+a {
+  color: $blue-3;
+  font-weight: 600;
+  letter-spacing: 0.95px;
+  transition: all 0.3s linear;
+
+  &:hover {
+    color: $blue;
+  }
+
+  &:active {
+    opacity: 0.9;
+  }
+}
+
+@import "@/assets/styles/blocks/buttons";
