--- a/src/assets/styles/mixins/_container.scss
+++ b/src/assets/styles/mixins/_container.scss
@@ -6,7 +6,7 @@
   overflow-x: hidden;
 }
 
-@mixin container() {
-  max-width: 1440px;
-  padding: 0 15px;
-}
+// @mixin container() {
+//   max-width: 1440px;
+//   padding: 0 15px;
+// }
