--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -2,10 +2,37 @@
 
 .header {
   @include row-center();
+  box-shadow: rgba(0, 0, 0, 0.19) 0px -7px 30px 0px;
 
   &__inner {
     width: 100%;
-    text-align: center;
-    background: red;
+
+    &.v-container {
+      padding-top: 0;
+      padding-bottom: 0;
+    }
+  }
+
+  &__nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: 1.5rem 0;
+
+    .list {
+      display: flex;
+      column-gap: 1rem;
+
+      &__item {
+        display: flex;
+        align-items: center;
+        text-transform: uppercase;
+        padding: 0.5rem;
+      }
+    }
+  }
+
+  &__btn {
   }
 }
