--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -5,9 +5,12 @@
   @include wrapper();
 }
 
-// .container {
-//   @include container();
-// }
+.container {
+  max-width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+  padding: 0 12px;
+}
 
 ul {
   list-style: none;
@@ -28,4 +31,5 @@ a {
   }
 }
 
+@import "@/assets/styles/media";
 @import "@/assets/styles/blocks/buttons";
